--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./p portfolio.css"/>
+    <link rel="stylesheet" href="./index.css"/>
 </head>
 <body>
     <div id="general">
         <span id="nav">
-    <li><a href="./p portfolio.html">Home</a></li>
+    <li><a href="./index.html">Home</a></li>
     <li><a href="./about..html">About</a></li>
     <li><a href="./project.html">Projects</a></li>
     <li><a href="./contact.html">Contact</a></li>
