--- a/menu.html
+++ b/menu.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <span id="nav">
-        <li><a href="./p portfolio.html">Home</a></li>
+        <li><a href="./index.html">Home</a></li>
         <li><a href="./about..html">About</a></li>
         <li><a href="./project.html">Projects</a></li>
         <li><a href="./contact.html">Contact</a></li>
